--- a/app/views/mainpage.css
+++ b/app/views/mainpage.css
@@ -38,7 +38,7 @@ body{
   padding-left: 1em;
   padding-right: 1em;
   height: 2em;
-  width: 32em;
+  width: 22em;
 }
 
 .nav .navLNK{
@@ -63,6 +63,8 @@ body{
   display: block;
   margin:auto;
   vertical-align: middle;
+  height: 2.5em;
+  width: 2.5em;
 }
 
 /*Posting*/
