--- a/app/views/navBar_ssi.html
+++ b/app/views/navBar_ssi.html
@@ -4,7 +4,7 @@
             <input id="mysearch" type="text" size="20" name="search" value="">
               <input type="submit" onclick="Searching" value="Search">
   	</form></li>
-  <li class = "nav" style = "float:right"><a onclick="eraseCookie(SID)" href="#loginscreen">Logout</a></li>
+  <li class = "nav" style = "float:right"><a onclick="eraseCookie(SID)" href="login.shtml">Logout</a></li>
   <li class = "nav" style = "float:right"><a href="#profilepage">Your Profile</a></li>
   <li class = "nav" style = "float:right"><a href="#homepage">Home</a></li>
 </ul>
