linked home to posts.php
Sorry. Should've done the last two edits as one. Didn't realize

--- a/app/views/navBar_ssi.html
+++ b/app/views/navBar_ssi.html
@@ -6,7 +6,7 @@
   	</form></li>
   <li class = "nav" style = "float:right"><a onclick="eraseCookie(SID)" href="login.shtml">Logout</a></li>
   <li class = "nav" style = "float:right"><a href="#profilepage">Your Profile</a></li>
-  <li class = "nav" style = "float:right"><a href="#homepage">Home</a></li>
+  <li class = "nav" style = "float:right"><a href="posts.php">Home</a></li>
 </ul>
 <br /> <br />
 
